--- a/config/jdbc.properties
+++ b/config/jdbc.properties
@@ -1,30 +1,20 @@
-#Oracle BaseInfo
+
+
+datasource.driverClassName=com.mysql.jdbc.Driver
+datasource.url=jdbc:mysql://106.14.36.36:3306/ccyd
+datasource.username=root
+datasource.password=root
 
 #datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#datasource.url=jdbc:oracle:thin:@10.1.60.10:1521:test
-#datasource.username=onlineclass3
-#datasource.password=onlineclass3
+#datasource.url=jdbc:oracle:thin:@10.1.50.10:1521:dev
+#datasource.username=operationmanagement
+#datasource.password=operationmanagement
 #datasource.initialSize=1
 #datasource.maxActive=500
 #datasource.minIdle=1
-#datasource.maxWait=5000
+#datasource.maxWait=50000
 #datasource.validationQuery=select 1 FROM DUAL
 #datasource.testOnBorrow=false
 #datasource.testOnReturn=false
 #datasource.testWhileIdle=true
 #datasource.timeBetweenEvictionRunsMillis=1800000
-
-
-datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-datasource.url=jdbc:oracle:thin:@10.1.50.10:1521:dev
-datasource.username=operationmanagement
-datasource.password=operationmanagement
-datasource.initialSize=1
-datasource.maxActive=500
-datasource.minIdle=1
-datasource.maxWait=50000
-datasource.validationQuery=select 1 FROM DUAL
-datasource.testOnBorrow=false
-datasource.testOnReturn=false
-datasource.testWhileIdle=true
-datasource.timeBetweenEvictionRunsMillis=1800000
